--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@ body{
     background-color: black;
     color: aliceblue;
 }
+
+.navbar{
+    position: fixed;
+}
+
+.insta-page{
+    display: flex;
+}
 .insta-logo{
     font-family: "Pacifico", cursive;
     font-weight: 400;
@@ -14,36 +22,203 @@ body{
     font-style: normal;
 }
 
+/* home*/
+
 .nav-home-flex{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 16px;
-    font-weight: 500;
     display: flex;
-    width: 85px;
     padding-left: 16px;
     align-items: center;
-    justify-content: space-between;
+    margin-top: 15px;
 }
 
+.nav-home{
+    transition: 0.1s;
+    border: none;
+    border-radius: 14px;
+    background-color: transparent;
+    color: white;
+    width: 200px;
+    height: 40px;
+    padding: 1px;
+    font-size: 16px;
+    font-weight: 500;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
+}
+
+.nav-home:hover{
+    font-size: 18px;
+    border: 0.2px solid lightgray;
+}
+
+/* search*/
 .nav-search-flex{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 16px;
-    font-weight: 500;
     display: flex;
-    width: 85px;
     padding-left: 16px;
     align-items: center;
-    justify-content: space-between;
-    
+    margin-top: 15px;
 }
 
-.nav-explore-flex{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.nav-search{
+    transition: 0.1s;
+    border: none;
+    border-radius: 14px;
+    background-color: transparent;
+    color: white;
+    width: 200px;
+    height: 40px;
+    padding: 1px;
     font-size: 16px;
     font-weight: 500;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
+}
+
+.nav-search:hover{
+    font-size: 18px;
+    border: 0.2px solid lightgray;
+}
+
+/* explore*/
+.nav-explore-flex{
     display: flex;
-    width: 90px;
     padding-left: 16px;
     align-items: center;
-    justify-content: space-between;
+    margin-top: 15px;
 }
+
+.nav-explore{
+    transition: 0.1s;
+    border: none;
+    border-radius: 14px;
+    background-color: transparent;
+    color: white;
+    width: 200px;
+    height: 40px;
+    padding: 1px;
+    font-size: 16px;
+    font-weight: 500;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.nav-explore:hover{
+    font-size: 18px;
+    border: 0.2px solid lightgray;
+}
+
+/* reels*/
+.nav-reels-flex{
+    display: flex;
+    padding-left: 20px;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.nav-reels{
+    transition: 0.1s;
+    border: none;
+    border-radius: 14px;
+    background-color: transparent;
+    color: white;
+    width: 200px;
+    height: 40px;
+    padding: 1px;
+    font-size: 16px;
+    font-weight: 500;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
+}
+
+.nav-reels:hover{
+    font-size: 18px;
+    border: 0.2px solid lightgray;
+}
+
+
+/* messages*/
+.nav-messages-flex{
+    display: flex;
+    padding-left: 20px;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.nav-messages{
+    transition: 0.1s;
+    border: none;
+    border-radius: 14px;
+    background-color: transparent;
+    color: white;
+    width: 200px;
+    height: 40px;
+    padding: 1px;
+    font-size: 16px;
+    font-weight: 500;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
+}
+
+.nav-messages:hover{
+    font-size: 18px;
+    border: 0.2px solid lightgray;
+}
+
+
+
+/* notification*/
+.nav-notification-flex{
+    display: flex;
+    padding-left: 20px;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.nav-notification{
+    transition: 0.1s;
+    border: none;
+    border-radius: 14px;
+    background-color: transparent;
+    color: white;
+    width: 200px;
+    height: 40px;
+    padding: 1px;
+    font-size: 16px;
+    font-weight: 500;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
+}
+
+.nav-notification:hover{
+    font-size: 18px;
+    border: 0.2px solid lightgray;
+}
+
+
+/* create*/
+.nav-create-flex{
+    display: flex;
+    padding-left: 20px;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.nav-create{
+    transition: 0.1s;
+    border: none;
+    border-radius: 14px;
+    background-color: transparent;
+    color: white;
+    width: 200px;
+    height: 40px;
+    padding: 1px;
+    font-size: 16px;
+    font-weight: 500;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
+}
+
+.nav-create:hover{
+    font-size: 18px;
+    border: 0.2px solid lightgray;
+}
+
+
+.bi{
+    margin-right: -35px;
+}
+
+
